# hue

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: HueOptions.cmake  RunWindowSmoke.cmake
docs/: timeline.md
engine/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/core/include/hue/core/: array.h  checked_math.h  hash_map.h  input.h  log.h  memory.h  result.h  string_id.h  time.h  trace.h  version.h  window.h
engine/core/src/: input.cpp  log.cpp  memory.cpp  version.cpp  window.cpp
game/: CMakeLists.txt
game/src/: main.cpp
tests/: CMakeLists.txt  main.cpp
tests/core/: test_array.cpp  test_checked_math.cpp  test_hash_map.cpp  test_log.cpp  test_memory.cpp  test_result.cpp  test_string_id.cpp  test_time.cpp
