# c:\ProjectHue\engine\CMakeLists.txt
add_subdirectory(core)
# Future subsystems, added as they come online per plan.md:
# add_subdirectory(render)   # Week 4
# add_subdirectory(asset)    # Week 5
# add_subdirectory(anim)     # Week 7
# add_subdirectory(ecs)      # Week 8
# add_subdirectory(physics)  # Week 8
# add_subdirectory(debugui)  # Week 13
